@@ -1,3 +1,8 @@
+2003-04-01	ujwal
+
+    * Now dynamically displaying window size as window is 
+      being resized.
+
 2003-03-31	ujwal
 
     * Made URL parsing in PTYTextView slightly more 
